--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
   },
   "scripts": {},
   "devDependencies": {
-    "browser-sync": "~2.18.7",
+    "browser-sync": "^2.24.4",
     "del": "~3.0.0",
     "gulp": "git+https://git@github.com/gulpjs/gulp.git#4.0",
     "gulp-autoprefixer": "~4.0.0",
-    "gulp-cheerio": "~0.6.2",
+    "gulp-cheerio": "^0.6.3",
     "gulp-concat": "~2.6.1",
     "gulp-csso": "~2.0.0",
     "gulp-eslint": "~3.0.1",
@@ -23,11 +23,11 @@
     "gulp-pug": "~3.3.0",
     "gulp-replace": "~0.5.4",
     "gulp-sass": "~3.1.0",
-    "gulp-sass-glob": "^1.0.8",
-    "gulp-sourcemaps": "~2.6.0",
+    "gulp-sass-glob": "^1.0.9",
+    "gulp-sourcemaps": "^2.6.4",
     "gulp-svg-sprite": "~1.3.1",
     "gulp-svgmin": "~1.2.2",
-    "gulp.spritesmith": "^6.4.0"
+    "gulp.spritesmith": "^6.9.0"
   },
   "dependencies": {
     "font-awesome": "^4.7.0",
